# CppWebSocketChat

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  SESSION_ID_A.txt  SESSION_ID_B.txt  compile_commands.json
.github/workflows/: cpp-ci.yml
react-chat-ui/: package-lock.json  package.json
react-chat-ui/src/: App.css  App.js  App.test.js  index.css
react-chat-ui/src/components/: MessageInput.js  MessageList.js  MessageList.test.js  StatusIndicator.js
react-chat-ui/src/hooks/: useWebSocket.js
scripts/: format-staged.sh
src/: BoostWebSocketStream.cpp  BoostWebSocketStream.hpp  ChatClient.cpp  ChatClient.hpp  ChatServer.cpp  ChatServer.hpp  IWebSocketStream.hpp  Session.cpp  Session.hpp  Utils.hpp  main.cpp
tests/: MockWebSocketStream.hpp  test_chat_client.cpp  test_server_functionality.cpp
